# xy_quant

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PLAN_v7_SilverM.md  PLAN_v8_integration.md  PROJECT_SUMMARY.md  README.md  XY_QUANT_OPERATIONS.md  coverage.json  progress.jsonl  pyproject.toml
backtest/: batch_backtest.py  engine.py  execution.py  metrics.py  multi_dimension.py  reporter.py  run_backtest.py  runner.py
config/: review_rules.yaml  risk_rules.yaml  scheduler_jobs.yaml  settings.py  settings.yaml
data/: api.py
deploy/: Dockerfile  docker-compose.yml  setup.sh
docs/: conventions.md  interfaces.md  tables.md
engine/: account.py  api.py  backtest_engine.py  clock.py  context.py  factor_scorer.py  live_engine.py  loader.py  market_data.py  persistence.py  position_sizer.py
factor/: __init__.py  analysis.py  expression.py  ga_miner.py  indicators.py  registry.py  updater.py
gateway/: __init__.py  base.py  event.py  manager.py  paper.py
hermes/: core.py  gateway.py
interfaces/: cache.py  data_source.py  factor.py  llm_provider.py  market_store.py  meta_store.py  notifier.py  quote_subscriber.py  report_renderer.py  scheduler.py  trade_gateway.py
jq_adapter/: __init__.py  data_provider.py  migrate.py  utils.py
review/: __init__.py  analyzer.py  collector.py  main.py  narrative.py
risk/: monitor.py  rules.py
scheduler/: __init__.py  service.py
scripts/: __init__.py  _bootstrap.py  auto_factor_mine.py  backfill_day.py  backfill_history.py  backfill_signals_factors.py  batch_scan.py  build_positions.py  compare_strategies.py  eval_signal_strategies.py  feishu_send_demo.py  feishu_send_image.py  feishu_signal_notify.py  fetch_intraday.py  fetch_intraday_fundflow.py  full_load.py  full_load_adj_factor.py  full_load_all.py  full_load_basic.py  full_load_calendar.py  full_load_daily_bar.py  full_load_daily_basic.py  full_load_finance.py  full_load_helpers.py  full_load_hk_hold.py  full_load_holdertrade.py  full_load_index_daily.py  full_load_limit_list.py  full_load_margin.py  full_load_member.py  full_load_minute_bar.py  full_load_money_flow.py  full_load_real_indicator.py  full_load_suspend.py  full_load_top_list.py  init_db.py  init_foundations.py  orchestration.py  orchestration_args.py  (+41 more)
(+203 files in other folders)
