[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xy_quant"
version = "0.1.0"
description = "Personal quantitative trading system"
requires-python = ">=3.14.3,<3.15"
dependencies = [
    "tushare>=1.4.0",
    "akshare>=1.15.0",
    "duckdb>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
    "playwright>=1.42.0",
]

[project.optional-dependencies]
factor = ["scipy>=1.13.0", "scikit-learn>=1.4.0", "numba>=0.59.0"]
backtest = ["quantstats>=0.0.62"]
parallel = ["ray[default]>=2.10.0"]
api = ["fastapi>=0.110.0", "uvicorn>=0.29.0", "websockets>=12.0"]
ui = ["streamlit>=1.33.0", "plotly>=5.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "backtest*",
    "config*",
    "data*",
    "factor*",
    "gateway*",
    "interfaces*",
    "live*",
    "review*",
    "risk*",
    "scheduler*",
    "strategy*",
    "ui*",
    "utils*",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["tmp"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PL"]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
exclude = ["^tmp/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: integration tests (require external services)",
    "slow: slow tests",
]
addopts = "-v --strict-markers"
